--- a/index.html
+++ b/index.html
@@ -30,19 +30,7 @@
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.8.0",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
-    "jspdf": "https://esm.sh/jspdf@2.5.1",
-    "html2canvas": "https://esm.sh/html2canvas@1.4.1"
-  }
-}
-</script>
+  <script type="module" src="/index.tsx"></script>
 </head>
   <body class="bg-slate-100 dark:bg-slate-900">
     <div id="root"></div>
